tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_sol_codegen@pre-mem2reg@llvm21_3.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i64, i64 } @_hl.main.1(i64 %0, i64 %1, double %2, double %3) {
alloca_block:
  %"0" = alloca i64, align 8
  %"1" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"2_2" = alloca double, align 8
  %"2_3" = alloca double, align 8
  %"4_0" = alloca i64, align 8
  %"4_1" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  store i64 %1, ptr %"2_1", align 4
  store double %2, ptr %"2_2", align 8
  store double %3, ptr %"2_3", align 8
  %"2_01" = load i64, ptr %"2_0", align 4
  %"2_12" = load i64, ptr %"2_1", align 4
  %"2_23" = load double, ptr %"2_2", align 8
  %"2_34" = load double, ptr %"2_3", align 8
  call void @___rpp(i64 %"2_01", i64 %"2_12", double %"2_23", double %"2_34")
  store i64 %"2_01", ptr %"4_0", align 4
  store i64 %"2_12", ptr %"4_1", align 4
  %"4_05" = load i64, ptr %"4_0", align 4
  %"4_16" = load i64, ptr %"4_1", align 4
  store i64 %"4_05", ptr %"0", align 4
  store i64 %"4_16", ptr %"1", align 4
  %"07" = load i64, ptr %"0", align 4
  %"18" = load i64, ptr %"1", align 4
  %mrv = insertvalue { i64, i64 } poison, i64 %"07", 0
  %mrv9 = insertvalue { i64, i64 } %mrv, i64 %"18", 1
  ret { i64, i64 } %mrv9
}

declare void @___rpp(i64, i64, double, double)
