tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_sol_codegen@pre-mem2reg@llvm21_8.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  call void @___reset(i64 %"2_01")
  store i64 %"2_01", ptr %"4_0", align 4
  %"4_02" = load i64, ptr %"4_0", align 4
  store i64 %"4_02", ptr %"0", align 4
  %"03" = load i64, ptr %"0", align 4
  ret i64 %"03"
}

declare void @___reset(i64)
